...
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofence_added">Geofence location added</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>
    <string name="save_the_reminder">Save the reminder.</string>
    <string name="reminder_details">Reminder Details</string>
    <string name="auth_map">person pointing to location on a map</string>
    <string name="email_signin">Sign in with Email</string>
    <string name="google_signin">Sign in with Google</string>
...
